--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "@naturalcycles/redis-lib",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky"
+  },
   "dependencies": {
-    "@naturalcycles/db-lib": "^2.0.2",
-    "@naturalcycles/js-lib": "^8.5.1",
-    "@naturalcycles/nodejs-lib": "^6.11.1",
-    "@types/ioredis": "^4.0.15",
-    "chalk": "^2.4.2",
-    "ioredis": "^4.14.0"
+    "@naturalcycles/db-lib": "^9.9.2",
+    "@naturalcycles/js-lib": "^14.217.0",
+    "@naturalcycles/nodejs-lib": "^13.8.0",
+    "ioredis": "^5.3.2"
   },
   "devDependencies": {
-    "@naturalcycles/dev-lib": "^8.1.0",
-    "@types/node": "^12.7.2",
-    "dotenv": "^8.1.0",
-    "jest": "^24.9.0"
-  },
-  "resolutions": {
-    "@types/hapi__joi": "15.0.4"
+    "@naturalcycles/dev-lib": "^13.49.2",
+    "@types/node": "^20.12.2",
+    "jest": "^29.7.0"
   },
   "files": [
     "dist",
@@ -29,6 +25,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
+    "provenance": true,
     "access": "public"
   },
   "repository": {
@@ -36,10 +33,10 @@
     "url": "https://github.com/NaturalCycles/redis-lib"
   },
   "engines": {
-    "node": ">=10.13"
+    "node": ">=18.12"
   },
   "version": "2.0.0",
-  "description": "Redis implementation of CommonDB interface",
+  "description": "Redis implementation of CommonKeyValueDB interface",
   "author": "Natural Cycles Team",
   "license": "MIT"
 }
