--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -2,7 +2,6 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "declaration": true,
-    "sourceMap": true
   },
-  "exclude": ["**/__exclude", "**/@linked", "src/test", "src/**/*.test.*"]
+  "exclude": ["**/__exclude", "src/test", "src/**/*.test.*"],
 }
