--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "@naturalcycles/redis-lib",
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+    "build": "dev-lib build",
+    "test": "dev-lib test",
+    "lint": "dev-lib lint",
+    "bt": "dev-lib bt",
+    "lbt": "dev-lib lbt"
   },
   "dependencies": {
     "@naturalcycles/db-lib": "^9.9.2",
@@ -10,8 +15,8 @@
     "ioredis": "^5.3.2"
   },
   "devDependencies": {
-    "@naturalcycles/dev-lib": "^13.49.2",
-    "@types/node": "^20.12.2",
+    "@naturalcycles/dev-lib": "^15.22.0",
+    "@types/node": "^22.7.5",
     "jest": "^29.7.0"
   },
   "files": [
@@ -33,7 +38,7 @@
     "url": "https://github.com/NaturalCycles/redis-lib"
   },
   "engines": {
-    "node": ">=18.12"
+    "node": ">=20.13"
   },
   "version": "2.0.0",
   "description": "Redis implementation of CommonKeyValueDB interface",
