--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@naturalcycles/redis-lib",
+  "type": "module",
   "scripts": {
     "prepare": "husky",
     "build": "dev-lib build",
@@ -9,15 +10,17 @@
     "lbt": "dev-lib lbt"
   },
   "dependencies": {
-    "@naturalcycles/db-lib": "^9.9.2",
-    "@naturalcycles/js-lib": "^14.217.0",
-    "@naturalcycles/nodejs-lib": "^13.8.0",
-    "ioredis": "^5.3.2"
+    "@naturalcycles/db-lib": "^10",
+    "@naturalcycles/js-lib": "^14",
+    "@naturalcycles/nodejs-lib": "^13",
+    "ioredis": "^5"
   },
   "devDependencies": {
-    "@naturalcycles/dev-lib": "^15.22.0",
-    "@types/node": "^22.7.5",
-    "jest": "^29.7.0"
+    "@naturalcycles/dev-lib": "^17",
+    "@types/node": "^22",
+    "@vitest/coverage-v8": "^3",
+    "tsx": "^4",
+    "vitest": "^3"
   },
   "files": [
     "dist",
@@ -38,7 +41,7 @@
     "url": "https://github.com/NaturalCycles/redis-lib"
   },
   "engines": {
-    "node": ">=20.13"
+    "node": ">=22.10"
   },
   "version": "2.0.0",
   "description": "Redis implementation of CommonKeyValueDB interface",
